minio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: phoenix-dev
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
        - name: minio-vol
          persistentVolumeClaim:
            claimName: phoenix-dev
      containers:
        - name: minio
          image: minio/minio:RELEASE.2021-03-12T00-00-47Z
          command: 
            - "/bin/sh"
            - "-ce"
            - "/usr/bin/docker-entrypoint.sh minio server --json /data"
          imagePullPolicy: Always
          volumeMounts:
            - name: minio-vol
              subPath: minio-vol
              mountPath: /data
          ports:
            - name: tcp
              containerPort: 9000
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 9000
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 9000
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "0.5"
              memory: "512Mi"
