minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: phoenix-dev
spec:
  selector:
    app: minio
  ports:
    - name: minio
      port: 9000
      targetPort: 9000
      protocol: TCP
      appProtocol: http
