minio/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: minio-https
  namespace: phoenix-dev
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - minio.nuomi.io
      secretName: minio.nuomi.io
  rules:
    - host: minio.nuomi.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: minio-http
  namespace: phoenix-dev
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: minio.nuomi.io
      http:
        paths:
          
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
